--- a/usuarios/pom.xml
+++ b/usuarios/pom.xml
@@ -2,12 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
+	<!-- Obtenido desde pom principal -->
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.0.1</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>com.jduquer</groupId>
+		<artifactId>spring-cloud-kube</artifactId>
+		<version>1.0-SNAPSHOT</version>
 	</parent>
+	<!-- Obtenido desde pom principal -->
+
 	<groupId>com.jduquer.springcloudkube</groupId>
 	<artifactId>usuarios</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
